# SofaControl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
backups/before-hidhide-guard-20260630-184443/: CMakeLists.txt  LICENSE  build.ps1
backups/before-hidhide-guard-20260630-184443/installer/: SofaControl.iss  build_installer.ps1
backups/before-hidhide-guard-20260630-184443/src/: AltTabSwitcher.h  AppConfig.cpp  AppConfig.h  AppMode.h  AppSettings.cpp  ControllerShortcuts.cpp  ControllerShortcuts.h  ControllerWindow.cpp  ControllerWindow.h  DeviceHider.cpp  DeviceHider.h  HidHidePaths.cpp  ModeManager.cpp  SearchOverlay.h  SofaControl.rc  SystemActions.cpp  SystemActions.h  VirtualGamepad.cpp  WindowManager.cpp  main.cpp
forgithub/: .gitignore  CMakeLists.txt  GITHUB_UPLOAD_NOTES.md  LICENSE  README.md
forgithub/installer/: SofaControl.iss  about.txt  register_startup_task.ps1
forgithub/scripts/: generate_icon.ps1  generate_toggle_wav.ps1  generate_toggle_wav.py
forgithub/src/: AltTabSwitcher.cpp  AppConfig.cpp  AppConfig.h  AppSettings.h  ControllerShortcuts.cpp  ControllerShortcuts.h  ControllerWindow.cpp  ControllerWindow.h  DeviceHider.cpp  DeviceHider.h  HidHideIoctl.h  HidHidePaths.h  IntegratedKeyboard.cpp  IntegratedKeyboard.h  KeyboardInput.cpp  KeyboardInput.h  ModeManager.h  MouseInput.cpp  MouseInput.h  SearchOverlay.cpp  SystemActions.cpp  SystemActions.h  VirtualGamepad.h  WindowManager.h  XboxController.cpp  XboxController.h  main.cpp
installer/: SofaControl.iss  about.txt  build_installer.ps1  mark_shortcuts_admin.ps1
scripts/: generate_icon.ps1  generate_toggle_wav.ps1  generate_toggle_wav.py
src/: AltTabSwitcher.cpp  AltTabSwitcher.h  AppConfig.cpp  AppConfig.h  AppSettings.cpp  AppSettings.h  ControllerShortcuts.cpp  ControllerShortcuts.h  ControllerWindow.cpp  DeviceHider.cpp  DeviceHider.h  GuardService.cpp  HidHideIoctl.h  HidHidePaths.cpp  HidHidePaths.h  IntegratedKeyboard.cpp  IntegratedKeyboard.h  ModeManager.cpp  ModeManager.h  MouseInput.cpp  MouseInput.h  SearchOverlay.cpp  SearchOverlay.h  SofaControl.rc  SystemActions.cpp  SystemActions.h  VirtualGamepad.cpp  VirtualGamepad.h  WindowManager.cpp  WindowManager.h  XInputProbe.cpp  XboxController.cpp  XboxController.h  main.cpp
